Bug 94783 - anchors encoded in URL's no longer jump to scroll position
Summary: anchors encoded in URL's no longer jump to scroll position
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: 3.3.2
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 94635 (view as bug list)
Depends on:
Blocks:
 
Reported: 2004-12-10 06:03 UTC by Jason Clinton
Modified: 2008-02-27 19:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jason Clinton 2004-12-10 06:03:19 UTC
Version:           3.3.2 (using KDE KDE 3.3.2)
Installed from:    Gentoo Packages
Compiler:          GCC 3.3.4 
OS:                Linux

In KHTML/Konqueror, a URL with an #anchor_name or #unique_id appended to the end of the URL no longer jumps to the position on the page where the anchor lies. Here is a test case: <http://www.debian.org/doc/manuals/reference/ch-system.en.html#s-sourcebuild>
Comment 1 Stephan Binner 2004-12-10 12:09:36 UTC
Recent regression, worked in 3.3.0 or 3.3.1 iirc.
Comment 2 Tommi Tervo 2004-12-10 13:07:16 UTC
*** Bug 94635 has been marked as a duplicate of this bug. ***
Comment 3 Germain Garand 2004-12-12 21:10:22 UTC
CVS commit by ggarand: 

sanitize anchor-jumping code ; merge restoreScrollPosition/gotoAnchor
slots to avoid undeterministic calling order and redundancy

BUG: 94783
			


  M +14 -0     ChangeLog   1.353
  M +19 -33    khtml_part.cpp   1.1061
  M +2 -5      khtml_part.h   1.270
  M +2 -0      khtmlpart_p.h   1.60



Comment 4 Caleb Tennis 2004-12-13 15:42:42 UTC
Can the patch be applied to 3_3_branch too?
Comment 5 Germain Garand 2004-12-13 16:40:27 UTC
CVS commit by ggarand: 

backport anchor-jumping regression fix
CCBUG: 57360, 94783


  M +19 -33    khtml_part.cpp   1.1015.2.14
  M +2 -5      khtml_part.h   1.262.2.4
  M +2 -0      khtmlpart_p.h   1.54.2.2