sanitize anchor-jumping code ; merge restoreScrollPosition/gotoAnchor slots to avoid undeterministic calling order and redundancy

BUG: 94783

svn path=/trunk/kdelibs/; revision=370185